--- a/ads-coursework.tex
+++ b/ads-coursework.tex
@@ -9,10 +9,23 @@
 
 \section{Introduction}
 
+The aim of this report is to explore and compare the different properties of
+three different kinds of databases beyond the traditional relational model. In it,
+the same dataset will be modelled in each of an \emph{Object-Relational} database,
+an \emph{XML} database and a \emph{Document} database.
+
+An optimal structure or schema will be designed for each database type, then
+each design will be implemented in each of \emph{PostgreSQL}, \emph{eXist}
+and \emph{MongoDB} along with a discussion around how each database would be
+queried for different use cases.
+
+Finally, there will be a comparitive discussion around the advantages and
+disadvantages between the different database types, including which the use
+cases to which each kind of database are most appropriate.
+
 \section{The Data}
 
 \section{Object-Relational}
-
 \subsection{Design}
 \subsection{Implementation}
 \subsection{Querying}
