--- a/bibtex.bib
+++ b/bibtex.bib
@@ -9,7 +9,8 @@
   title={Further normalization of the data base relational model},
   author={Codd, Edgar F},
   journal={Data base systems},
+  pages={33--64},
   year={1972},
+  volume="",
   publisher={Prentice-Hall}
 }
-
