--- a/bibtex.bib
+++ b/bibtex.bib
@@ -14,3 +14,23 @@
   volume="",
   publisher={Prentice-Hall}
 }
+@article{wu1992practical,
+  title={The practical need for fourth normal form},
+  author={Wu, Margaret S},
+  journal={ACM SIGCSE Bulletin},
+  volume={24},
+  number={1},
+  pages={19--23},
+  year={1992},
+  publisher={ACM}
+}
+@article{fagin1977multivalued,
+  title={Multivalued dependencies and a new normal form for relational databases},
+  author={Fagin, Ronald},
+  journal={ACM Transactions on Database Systems (TODS)},
+  volume={2},
+  number={3},
+  pages={262--278},
+  year={1977},
+  publisher={ACM}
+}
