--- a/bibtex.bib
+++ b/bibtex.bib
@@ -34,3 +34,9 @@
   year={1977},
   publisher={ACM}
 }
+@book{smith2008tagging,
+  title={Tagging: people-powered metadata for the social web},
+  author={Smith, Gene},
+  year={2008},
+  publisher={New Rider Press}
+}
